# realtime-streaming-pipeline

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml
analytics/: __init__.py  aggregator.py  output_sink.py
consumer/: __init__.py  dlq_handler.py  lambda_function.py  transformer.py
infrastructure/: cloudwatch.tf  iam.tf  kinesis.tf  lambda.tf
monitoring/: dashboard.json  healthcheck.sh  setup_alarms.sh
producer/: __init__.py  config.py  data_generator.py  producer.py
scripts/: deploy.sh  scale_shards.sh  tail_logs.sh
tests/: test_aggregator.py  test_producer.py  test_transformer.py
